# onnx-genai

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  RULES.md  codecov.yml
crates/mlas-sys/: Cargo.toml  build.rs
crates/mlas-sys/src/: lib.rs
crates/onnx-genai/: Cargo.toml
crates/onnx-genai-bench/: Cargo.toml  README.md
crates/onnx-genai-bench/benches/: model.rs  no_model.rs
crates/onnx-genai-bench/src/: lib.rs  synthetic_decoder.rs
crates/onnx-genai-bench/tests/: profile_native.rs
crates/onnx-genai-capi/: Cargo.toml  README.md
crates/onnx-genai-capi/examples/: custom_sampler.c
crates/onnx-genai-capi/include/: onnx_genai.h
crates/onnx-genai-capi/src/: lib.rs
crates/onnx-genai-cli/: Cargo.toml  README.md  pyproject.toml
crates/onnx-genai-cli/src/: lib.rs  main.rs
crates/onnx-genai-comfyui-config/: Cargo.toml
crates/onnx-genai-comfyui-config/src/: lib.rs
crates/onnx-genai-engine/: Cargo.toml
crates/onnx-genai-engine/examples/: generate_scalar_gqa_fixture.rs
crates/onnx-genai-engine/src/: batched.rs  config.rs  connector_bridge.rs  decode.rs  decode_loop.rs  embedding.rs  engine.rs  fim.rs  genai_config.rs  kv_bridge.rs  lib.rs  logits.rs  native_component.rs  native_decode.rs  native_speculative.rs  pipeline.rs  processors.rs  sampling.rs  session.rs  speculative.rs
crates/onnx-genai-engine/tests/: batched_shared_buffer_decode.rs  batched_static_decode.rs  codec_pipeline_e2e.rs  decode_position_and_state_e2e.rs  deepseek_e2e.rs  deepseek_r1_1_5b_divergence.rs  e2e_mobius_heads.rs  gemma4_assistant_full.rs  gemma4_assistant_metadata_smoke.rs  gemma4_assistant_mixed.rs  gemma4_vlm_pipeline_e2e.rs  glm4_9b_decode_lock.rs  glm_tiny_qmoe_e2e.rs  glm_tiny_qmoe_native_cuda_e2e.rs  glm_tiny_quant_e2e.rs  glm_tiny_synthetic_e2e.rs  iterative_pipeline_e2e.rs  milestone_b_real.rs  mtp_full.rs  multi_session.rs  native_engine.rs  native_speculative_driver.rs  optional_modality_pipeline_e2e.rs  phase3_concurrency_stress.rs  phi35_fp16_decode_parity.rs  phi35_mini_divergence.rs  phi35_mini_fp16_decode_lock.rs  phi35_mini_native_cuda_lock.rs  phi4_mini_divergence.rs  pipeline_executor.rs  prefix_speedup.rs  priority_preemption.rs  prompt_lookup.rs  qwen2_5_0_5b_divergence.rs  qwen2_5_1_5b_divergence.rs  qwen2_5_7b_divergence.rs  qwen3_0_6b_divergence.rs  qwen3_0_6b_foundry_native_cuda_lock.rs  qwen3_0_6b_native_cuda_e2e.rs  speculative_speedup.rs  (+8 more)
crates/onnx-genai-genai-config/: Cargo.toml
crates/onnx-genai-genai-config/src/: lib.rs
crates/onnx-genai-genai-config/tests/: vlm_pipeline.rs
crates/onnx-genai-kv/: Cargo.toml
crates/onnx-genai-kv/src/: connector.rs  fp8.rs  lib.rs  local_tiered.rs  page_table.rs  paged_cache.rs  prefix_cache.rs  tiered.rs
crates/onnx-genai-kv/tests/: fork_cow.rs
crates/onnx-genai-metadata/: Cargo.toml
crates/onnx-genai-metadata/src/: component.rs  lib.rs  parser.rs  schema.rs  validation.rs
crates/onnx-genai-metadata/tests/: metadata_fixtures.rs  schema_sync.rs
crates/onnx-genai-ort/: Cargo.toml
crates/onnx-genai-ort/examples/: hybrid_prefill_decode.rs  long_context_bench.rs
crates/onnx-genai-ort/ort-sys/: Cargo.toml  build.rs
crates/onnx-genai-ort/src/: allocator.rs  binding.rs  chat_template.rs  component.rs  cuda_argmax.rs  cuda_rt.rs  decode.rs  device_sampler.rs  eagle3.rs  env.rs  error.rs  lib.rs  loader.rs  mtp.rs  pipeline_admission.rs  profile.rs  session.rs  shared_kv_proposer.rs  tokenizer.rs  value.rs
crates/onnx-genai-ort/tests/: chat_template.rs  decode_session.rs  execution_provider.rs  model_directory.rs  mtp_session.rs  pipeline_admission.rs  pipeline_genai_fallback.rs  pipeline_loader.rs  static_cache_signature.rs  textproto_session.rs  tokenizer.rs  uncaptured_persistent_decode.rs
crates/onnx-genai-preprocess/: Cargo.toml
crates/onnx-genai-preprocess/src/: audio.rs  image.rs  lib.rs
crates/onnx-genai-python/: Cargo.toml  README.md  pyproject.toml
crates/onnx-genai-python/src/: lib.rs
crates/onnx-genai-router/: Cargo.toml
crates/onnx-genai-router/src/: api.rs  config.rs  lib.rs  main.rs  metrics.rs  node.rs  node_poller.rs  prefix_map.rs  proxy.rs  router.rs  session_map.rs  state.rs
crates/onnx-genai-router/tests/: proxy_integration.rs
crates/onnx-genai-scheduler/: Cargo.toml
crates/onnx-genai-scheduler/src/: byte_budget.rs  governor.rs  lib.rs  policy.rs  pressure.rs
crates/onnx-genai-scheduler/tests/: pressure_conformance.rs
crates/onnx-genai-server/: Cargo.toml
crates/onnx-genai-server/src/: audio_input.rs  cli.rs  driver.rs  image_input.rs  lib.rs  main.rs  metrics.rs  models_config.rs  registry.rs  routes.rs  session.rs  sse.rs  state.rs  tests.rs  types.rs
crates/onnx-genai-server/tests/: http.rs  vlm_image_bundle.rs
crates/onnx-genai/src/: lib.rs
crates/onnx-genai/tests/: real_model_cli.rs
crates/onnx-rs/: Cargo.toml
crates/onnx-rs-python/: Cargo.toml  README.md  pyproject.toml
crates/onnx-rs-python/src/: lib.rs
crates/onnx-rs-python/tests/: test_path_args.py
crates/onnx-rs/src/: codec.rs  error.rs  lib.rs  model.rs  shape.rs  version.rs
crates/onnx-rs/tests/: full_spec_serde.rs  text_format_port.rs
crates/onnx-runtime-capi/: Cargo.toml
crates/onnx-runtime-capi/src/: lib.rs
crates/onnx-runtime-capi/tests/: capi.rs
crates/onnx-runtime-comm/: Cargo.toml
crates/onnx-runtime-comm/src/: communicator.rs  inprocess.rs  lib.rs  ordering.rs  reduction.rs  registry.rs  types.rs
crates/onnx-runtime-comm/tests/: buffer_ownership_conformance.rs  collective_ordering_conformance.rs
crates/onnx-runtime-cpuinfo/: Cargo.toml  build.rs
crates/onnx-runtime-cpuinfo/src/: ffi.rs  lib.rs
crates/onnx-runtime-dlpack/: Cargo.toml
crates/onnx-runtime-dlpack/src/: lib.rs
crates/onnx-runtime-eager/: Cargo.toml
crates/onnx-runtime-eager/src/: cache.rs  dispatch.rs  domain.rs  error.rs  lib.rs  opset.rs  tensor.rs
crates/onnx-runtime-eager/tests/: dispatch.rs
crates/onnx-runtime-ep-api/: Cargo.toml
crates/onnx-runtime-ep-cpu/: Cargo.toml  build.rs
crates/onnx-runtime-ep-cuda/: Cargo.toml
crates/onnx-runtime-ir/: Cargo.toml
(+1173 files in other folders)
