[workspace]
resolver = "2"
members = [
    "crates/onnx-genai",
    "crates/onnx-genai-preprocess",
    "crates/onnx-genai-metadata",
    "crates/onnx-genai-genai-config",
    "crates/onnx-genai-kv",
    "crates/onnx-genai-scheduler",
    "crates/onnx-genai-engine",
    "crates/onnx-genai-ort",
    "crates/onnx-genai-server",
    "crates/onnx-genai-router",
    "crates/onnx-genai-bench",
    "crates/onnx-genai-ort/ort-sys",

    # ── ORT 2.0 runtime layer (new — see docs/ORT2.md) ──
    "crates/onnx-runtime-ir",
    "crates/onnx-runtime-loader",
    "crates/onnx-runtime-shape-inference",
    "crates/onnx-runtime-optimizer",
    "crates/onnx-runtime-ep-api",
    "crates/onnx-runtime-ep-cpu",
    "crates/onnx-runtime-session",
    "crates/onnx-runtime-capi",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Justin Chu"]
repository = "https://github.com/justinchuby/onnx-genai"

[workspace.dependencies]
# Internal crates
onnx-genai = { path = "crates/onnx-genai", version = "0.1.0" }
onnx-genai-preprocess = { path = "crates/onnx-genai-preprocess", version = "0.1.0" }
onnx-genai-metadata = { path = "crates/onnx-genai-metadata", version = "0.1.0" }
onnx-genai-genai-config = { path = "crates/onnx-genai-genai-config", version = "0.1.0" }
onnx-genai-kv = { path = "crates/onnx-genai-kv", version = "0.1.0" }
onnx-genai-scheduler = { path = "crates/onnx-genai-scheduler", version = "0.1.0" }
onnx-genai-engine = { path = "crates/onnx-genai-engine", version = "0.1.0" }
onnx-genai-ort = { path = "crates/onnx-genai-ort", version = "0.1.0" }
onnx-genai-ort-sys = { path = "crates/onnx-genai-ort/ort-sys", version = "0.1.0" }

# ORT 2.0 runtime layer (new)
onnx-runtime-ir = { path = "crates/onnx-runtime-ir", version = "=0.1.0-dev.0" }
onnx-runtime-loader = { path = "crates/onnx-runtime-loader", version = "=0.1.0-dev.0" }
onnx-runtime-shape-inference = { path = "crates/onnx-runtime-shape-inference", version = "=0.1.0-dev.0" }
onnx-runtime-optimizer = { path = "crates/onnx-runtime-optimizer", version = "=0.1.0-dev.0" }
onnx-runtime-ep-api = { path = "crates/onnx-runtime-ep-api", version = "=0.1.0-dev.0" }
onnx-runtime-ep-cpu = { path = "crates/onnx-runtime-ep-cpu", version = "=0.1.0-dev.0" }
onnx-runtime-session = { path = "crates/onnx-runtime-session", version = "=0.1.0-dev.0" }
onnx-runtime-capi = { path = "crates/onnx-runtime-capi", version = "=0.1.0-dev.0" }

# External
tokenizers = "0.21"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tower = { version = "0.5", features = ["util"] }
hound = "3.5"
rustfft = "6.4"
