[workspace]
resolver = "2"
members = [
    "crates/onnx-genai",
    "crates/onnx-genai-preprocess",
    "crates/onnx-genai-metadata",
    "crates/onnx-genai-genai-config",
    "crates/onnx-genai-comfyui-config",
    "crates/onnx-genai-runtime-config",
    "crates/onnx-genai-kv",
    "crates/onnx-genai-scheduler",
    "crates/onnx-genai-engine",
    "crates/onnx-genai-ort",
    "crates/onnx-genai-server",
    "crates/onnx-genai-router",
    "crates/onnx-genai-bench",
    "crates/onnx-genai-capi",
    "crates/onnx-genai-ort/ort-sys",

    # ── ORT 2.0 runtime layer (new — see docs/ORT2.md) ──
    "crates/onnx-runtime-ir",
    "crates/onnx-runtime-memory",
    "crates/onnx-runtime-cpuinfo",
    "crates/onnx-runtime-loader",
    "crates/onnx-runtime-shape-inference",
    "crates/onnx-runtime-optimizer",
    "crates/onnx-runtime-quantization",
    "crates/onnx-runtime-ep-api",
    "crates/onnx-runtime-ep-cpu",
    "crates/onnx-runtime-ep-cuda",
    "crates/onnx-runtime-eager",
    "crates/onnx-runtime-session",
    "crates/onnx-runtime-capi",
    "crates/onnx-runtime-tracer",
    "crates/onnx-runtime-python",
    "crates/onnx-runtime-dlpack",

    # ── Python packaging + unified CLI (onnx-genai / onnx-genai-server wheels) ──
    "crates/onnx-genai-python",
    "crates/onnx-genai-cli",

    # ── Protocol conformance framework (new — see docs/PRESSURE_PROTOCOL_IMPL.md) ──
    "crates/onnx-runtime-protocol-trace",

    # ── Distributed runtime: communicator + buffer ownership (new — see docs/COMMUNICATOR_BUFFER_IMPL.md) ──
    "crates/onnx-runtime-comm",

    # ── onnx-rs standard library (new — see docs/ONNX_RS.md) ──
    "crates/onnx-rs",
    "crates/onnx-rs-python",

    # ── FEASIBILITY SPIKE (see docs/MLAS_SYS_SPIKE.md) ──
    # Registered as a member so `cargo build -p mlas-sys` resolves, but kept
    # out of `default-members` below so bare `cargo build`/`cargo test` (and
    # CI) do NOT compile the vendored MLAS C++. Remove after the spike review.
    "crates/mlas-sys",
]

# Bare `cargo build`/`cargo test` operate on this set only, which excludes the
# mlas-sys spike. Build the spike explicitly with `-p mlas-sys`.
default-members = [
    "crates/onnx-genai",
    "crates/onnx-genai-preprocess",
    "crates/onnx-genai-metadata",
    "crates/onnx-genai-genai-config",
    "crates/onnx-genai-runtime-config",
    "crates/onnx-genai-kv",
    "crates/onnx-genai-scheduler",
    "crates/onnx-genai-engine",
    "crates/onnx-genai-ort",
    "crates/onnx-genai-server",
    "crates/onnx-genai-router",
    "crates/onnx-genai-bench",
    "crates/onnx-genai-capi",
    "crates/onnx-genai-ort/ort-sys",
    "crates/onnx-runtime-ir",
    "crates/onnx-runtime-memory",
    "crates/onnx-runtime-cpuinfo",
    "crates/onnx-runtime-loader",
    "crates/onnx-runtime-shape-inference",
    "crates/onnx-runtime-optimizer",
    "crates/onnx-runtime-quantization",
    "crates/onnx-runtime-ep-api",
    "crates/onnx-runtime-ep-cpu",
    "crates/onnx-runtime-ep-cuda",
    "crates/onnx-runtime-eager",
    "crates/onnx-runtime-session",
    "crates/onnx-runtime-capi",
    "crates/onnx-runtime-tracer",
    "crates/onnx-runtime-python",
    "crates/onnx-runtime-dlpack",
    "crates/onnx-genai-python",
    "crates/onnx-genai-cli",
    "crates/onnx-runtime-protocol-trace",
    "crates/onnx-runtime-comm",
    "crates/onnx-rs",
    "crates/onnx-rs-python",
]

[workspace.package]
version = "0.1.0-dev.3"
edition = "2024"
license = "MIT"
authors = ["Justin Chu"]
repository = "https://github.com/justinchuby/onnx-genai"

[workspace.dependencies]
# Internal crates
onnx-genai = { path = "crates/onnx-genai", version = "=0.1.0-dev.3" }
onnx-genai-preprocess = { path = "crates/onnx-genai-preprocess", version = "=0.1.0-dev.3" }
onnx-genai-metadata = { path = "crates/onnx-genai-metadata", version = "=0.1.0-dev.3" }
onnx-genai-genai-config = { path = "crates/onnx-genai-genai-config", version = "=0.1.0-dev.3" }
onnx-genai-comfyui-config = { path = "crates/onnx-genai-comfyui-config", version = "=0.1.0-dev.3" }
onnx-genai-runtime-config = { path = "crates/onnx-genai-runtime-config", version = "=0.1.0-dev.3" }
onnx-genai-kv = { path = "crates/onnx-genai-kv", version = "=0.1.0-dev.3" }
onnx-genai-scheduler = { path = "crates/onnx-genai-scheduler", version = "=0.1.0-dev.3" }
onnx-genai-engine = { path = "crates/onnx-genai-engine", version = "=0.1.0-dev.3" }
onnx-genai-ort = { path = "crates/onnx-genai-ort", version = "=0.1.0-dev.3" }
onnx-genai-ort-sys = { path = "crates/onnx-genai-ort/ort-sys", version = "=0.1.0-dev.3" }
onnx-genai-capi = { path = "crates/onnx-genai-capi", version = "=0.1.0-dev.3" }
onnx-genai-server = { path = "crates/onnx-genai-server", version = "=0.1.0-dev.3" }
# ORT 2.0 runtime layer (new)
onnx-runtime-ir = { path = "crates/onnx-runtime-ir", version = "=0.1.0-dev.3" }
onnx-runtime-memory = { path = "crates/onnx-runtime-memory", version = "=0.1.0-dev.3" }
onnx-runtime-cpuinfo = { path = "crates/onnx-runtime-cpuinfo", version = "=0.1.0-dev.3" }
onnx-runtime-loader = { path = "crates/onnx-runtime-loader", version = "=0.1.0-dev.3" }
onnx-runtime-shape-inference = { path = "crates/onnx-runtime-shape-inference", version = "=0.1.0-dev.3" }
onnx-runtime-optimizer = { path = "crates/onnx-runtime-optimizer", version = "=0.1.0-dev.3" }
onnx-runtime-quantization = { path = "crates/onnx-runtime-quantization", version = "=0.1.0-dev.3" }
onnx-runtime-ep-api = { path = "crates/onnx-runtime-ep-api", version = "=0.1.0-dev.3" }
onnx-runtime-ep-cpu = { path = "crates/onnx-runtime-ep-cpu", version = "=0.1.0-dev.3" }
mlas-sys = { path = "crates/mlas-sys", version = "0.0.0" }
onnx-runtime-ep-cuda = { path = "crates/onnx-runtime-ep-cuda", version = "=0.1.0-dev.3" }
onnx-runtime-eager = { path = "crates/onnx-runtime-eager", version = "=0.1.0-dev.3" }
onnx-runtime-session = { path = "crates/onnx-runtime-session", version = "=0.1.0-dev.3" }
onnx-runtime-capi = { path = "crates/onnx-runtime-capi", version = "=0.1.0-dev.3" }
onnx-runtime-tracer = { path = "crates/onnx-runtime-tracer", version = "=0.1.0-dev.3" }
onnx-runtime-dlpack = { path = "crates/onnx-runtime-dlpack", version = "=0.1.0-dev.3" }
onnx-runtime-protocol-trace = { path = "crates/onnx-runtime-protocol-trace", version = "=0.1.0-dev.3" }
onnx-runtime-comm = { path = "crates/onnx-runtime-comm", version = "=0.1.0-dev.3" }

# onnx-rs standard library (new — see docs/ONNX_RS.md)
onnx-rs = { path = "crates/onnx-rs", version = "=0.1.0-dev.3" }

# External
tokenizers = "0.21"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tower = { version = "0.5", features = ["util"] }
hound = "3.5"
rustfft = "6.4"
