[package]
name = "onnx-genai-bench"
description = "Criterion benchmark suite for onnx-genai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
bench-ort = ["dep:onnx-genai-ort"]
bench-native = [
    "dep:onnx-runtime-ep-cpu",
    "dep:onnx-runtime-ep-cuda",
    "dep:onnx-runtime-session",
]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
onnx-genai-engine = { workspace = true }
onnx-genai-kv = { workspace = true }
onnx-genai-ort = { workspace = true, optional = true }
onnx-genai-runtime-config = { workspace = true }
onnx-runtime-ep-cpu = { workspace = true, optional = true }
onnx-runtime-ep-cuda = { workspace = true, optional = true }
onnx-runtime-session = { workspace = true, optional = true }
serde_json = { workspace = true }
tokenizers = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "no_model"
harness = false

[[bench]]
name = "model"
harness = false
required-features = ["bench-ort"]

[[bin]]
name = "profile_decode"
required-features = ["bench-ort"]

[[bin]]
name = "profile_native"
required-features = ["bench-native"]
