[package]
name = "onnx-genai-bench"
description = "Criterion benchmark suite for onnx-genai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
bench-ort = ["dep:onnx-genai-ort"]
bench-native = [
    "onnx-genai-engine/native-backend",
    "dep:onnx-genai-ort",
    "dep:onnx-runtime-ep-cpu",
    "onnx-runtime-ep-cpu/tracing",
    "dep:onnx-runtime-ep-cuda",
    "dep:onnx-runtime-ir",
    "dep:onnx-runtime-loader",
    "dep:onnx-runtime-session",
]
mlas = [
    "bench-native",
    "onnx-genai-engine/mlas",
    "onnx-runtime-ep-cpu/mlas",
]
cuda = ["onnx-genai-engine/cuda", "onnx-runtime-session/cuda"]
# Device-sampler-only CUDA: enables the ORT built-in CUDA EP path plus the
# on-device argmax/sampler in `onnx-genai-ort` WITHOUT the pure-Rust
# `onnx-runtime-ep-cuda` (which pins a different cudarc CUDA version and would
# collide). Use this to benchmark the captured decode / device sampling path.
cuda-ort = [
    "bench-ort",
    "onnx-genai-ort/cuda",
    "onnx-genai-ort/cuda-12060",
]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
onnx-genai-engine = { workspace = true }
onnx-genai-kv = { workspace = true }
onnx-genai-ort = { path = "../onnx-genai-ort", version = "=0.1.0-dev.2", default-features = false, optional = true }
onnx-genai-runtime-config = { workspace = true }
onnx-runtime-ep-cpu = { workspace = true, optional = true }
onnx-runtime-ep-cuda = { workspace = true, optional = true }
onnx-runtime-ir = { workspace = true, optional = true }
onnx-runtime-loader = { workspace = true, optional = true }
onnx-runtime-session = { workspace = true, optional = true }
serde_json = { workspace = true }
tokenizers = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "no_model"
harness = false

[[bench]]
name = "model"
harness = false
required-features = ["bench-ort"]

[[bin]]
name = "profile_decode"
required-features = ["bench-ort"]

[[bin]]
name = "render_template"
required-features = ["bench-ort"]

[[bin]]
name = "profile_native"
required-features = ["bench-native"]
