[package]
name = "onnx-genai-capi"
description = "C ABI for onnx-genai: load a model, generate, and plug in a foreign (C) sampler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["onnx", "capi", "ffi", "inference", "sampler"]
categories = ["science", "api-bindings"]

[lib]
# `cdylib`/`staticlib` produce the loadable C library; `lib` lets Rust tests and
# downstream crates link the same surface (e.g. to exercise `ForeignSampler`).
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
# Forward the engine CUDA execution provider + on-device argmax through the C ABI.
cuda = ["onnx-genai-engine/cuda"]

[dependencies]
onnx-genai-engine = { workspace = true }
anyhow = { workspace = true }
