# Unified `onnx-genai` command-line tool.
#
# Ships as the `onnx-genai-server` wheel (maturin bin wheel): `pip install
# onnx-genai-server` installs a single `onnx-genai` console command exposing
# `serve`, `generate`, `run`, `show`, `list`, and `version`. It depends on the
# core `onnx-genai` engine (generation) and `onnx-genai-server` (the
# OpenAI-compatible server), so it lives in its own crate to avoid a dependency
# cycle with the core crate.
[package]
name = "onnx-genai-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified onnx-genai command-line interface (serve, generate, run, show, list)"
publish = false

[[bin]]
name = "onnx-genai"
path = "src/main.rs"

[features]
default = []
# Enable the ONNX Runtime and native CUDA execution providers end to end.
cuda = ["onnx-genai-server/cuda"]
cuda-12060 = ["onnx-genai-server/cuda-12060"]
cuda-12080 = ["onnx-genai-server/cuda-12080"]
cuda-12090 = ["onnx-genai-server/cuda-12090"]
cuda-13000 = ["onnx-genai-server/cuda-13000"]
# Native decoder execution for models containing native-only operators.
native-backend = ["onnx-genai-server/native-backend"]
mlas = ["onnx-genai-server/mlas"]

[dependencies]
onnx-genai = { workspace = true }
onnx-genai-engine = { workspace = true }
onnx-genai-server = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
