[package]
name = "onnx-genai-comfyui-config"
description = "Compatibility layer that converts a ComfyUI API-format workflow JSON into native onnx-genai inference metadata"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["onnx", "comfyui", "diffusion", "metadata", "compat"]
categories = ["science", "parser-implementations"]

[dependencies]
onnx-genai-metadata = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
