[package]
name = "onnx-genai-engine"
description = "Text generation engine combining ONNX Runtime, scheduling, and KV caching"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["onnx", "llm", "inference", "genai"]
categories = ["science", "text-processing"]

[features]
default = []
native-backend = [
    "dep:onnx-runtime-ep-cpu",
    "dep:onnx-runtime-ir",
    "dep:onnx-runtime-loader",
    "dep:onnx-runtime-session",
    "dep:prost",
]
# Forwards to `onnx-genai-ort/cuda` so the CUDA execution provider is compiled
# in. Runtime EP selection still goes through `ONNX_GENAI_EP`; without this
# feature a `cuda` request silently falls back to CPU.
cuda = ["onnx-genai-ort/cuda", "onnx-runtime-session?/cuda", "dep:onnx-runtime-ep-cuda"]

[dependencies]
onnx-genai-metadata = { workspace = true }
onnx-genai-genai-config = { workspace = true }
onnx-genai-kv = { workspace = true }
onnx-genai-scheduler = { workspace = true }
onnx-genai-ort = { workspace = true }
onnx-genai-runtime-config = { workspace = true }
onnx-runtime-ep-cpu = { workspace = true, optional = true }
onnx-runtime-ep-cuda = { workspace = true, optional = true }
onnx-runtime-ir = { workspace = true, optional = true }
onnx-runtime-loader = { workspace = true, optional = true }
onnx-runtime-session = { workspace = true, optional = true }
prost = { version = "0.13", optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokenizers = { workspace = true }
rand = "0.9.5"
llguidance = "1.7.6"
toktrie_hf_tokenizers = "1.7.6"

[dev-dependencies]
onnx-genai-preprocess = { workspace = true }
async-trait = { workspace = true }
