[package]
name = "onnx-genai-engine"
description = "Text generation engine combining ONNX Runtime, scheduling, and KV caching"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["onnx", "llm", "inference", "genai"]
categories = ["science", "text-processing"]

[features]
default = []
native-backend = [
    "dep:onnx-runtime-ep-cpu",
    "dep:onnx-runtime-session",
]
# Forwards to `onnx-genai-ort/cuda` so the CUDA execution provider is compiled
# in. Runtime EP selection still goes through `ONNX_GENAI_EP`; without this
# feature a `cuda` request silently falls back to CPU.
cuda = ["onnx-genai-ort/cuda", "onnx-runtime-session?/cuda", "dep:onnx-runtime-ep-cuda"]
# CUDA API version passthroughs, forwarded to `onnx-genai-ort`. Enable alongside
# `cuda` to target a newer CUDA runtime; the highest enabled version wins.
cuda-12060 = ["onnx-genai-ort/cuda-12060"]
cuda-12080 = ["onnx-genai-ort/cuda-12080"]
cuda-12090 = ["onnx-genai-ort/cuda-12090"]
cuda-13000 = ["onnx-genai-ort/cuda-13000"]

[dependencies]
onnx-genai-metadata = { workspace = true }
onnx-genai-genai-config = { workspace = true }
onnx-genai-kv = { workspace = true }
onnx-genai-scheduler = { workspace = true }
onnx-genai-ort = { workspace = true }
onnx-genai-runtime-config = { workspace = true }
onnx-runtime-ep-cpu = { workspace = true, optional = true }
onnx-runtime-ep-cuda = { workspace = true, optional = true }
onnx-runtime-ir = { workspace = true }
onnx-runtime-loader = { workspace = true }
onnx-runtime-session = { workspace = true, optional = true }
prost = { version = "0.13" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokenizers = { workspace = true }
rand = "0.9.5"
half = { version = "2", features = ["use-intrinsics"] }
llguidance = "1.7.6"
toktrie_hf_tokenizers = "1.7.6"

[dev-dependencies]
onnx-genai-preprocess = { workspace = true }
onnx-rs = { workspace = true }
async-trait = { workspace = true }
