[package]
name = "onnx-genai-engine"
description = "Text generation engine combining ONNX Runtime, scheduling, and KV caching"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["onnx", "llm", "inference", "genai"]
categories = ["science", "text-processing"]

[features]
default = []
native-backend = [
    "dep:onnx-runtime-ep-cpu",
    "onnx-runtime-ep-cpu/tracing",
    "dep:onnx-runtime-session",
    "dep:onnx-runtime-tracer",
]
mlas = [
    "native-backend",
    "onnx-runtime-ep-cpu/mlas",
    "onnx-runtime-session/mlas",
]
# The native CUDA EP is pinned to CUDA 13.0, so select the same cudarc bindings
# in `onnx-genai-ort`. Runtime EP selection still goes through `ONNX_GENAI_EP`;
# without this feature a `cuda` request silently falls back to CPU.
cuda = [
    "onnx-genai-ort/cuda",
    "onnx-genai-ort/cuda-13000",
    "onnx-runtime-session?/cuda",
    "dep:onnx-runtime-ep-cuda",
]
# ONNX Runtime CUDA only: enable ONNX Runtime's built-in CUDAExecutionProvider
# selection and the cudarc GPU sampler in `onnx-genai-ort`, WITHOUT pulling the
# nxrt-native CUDA kernel crate (`onnx-runtime-ep-cuda`) or the native backend.
# This is what the ONNX Runtime-backed `onnx-genai` wheel builds with; GPU comes
# from the `onnxruntime-gpu` runtime wheel (installed via the `[cuda]` extra).
ort-cuda = ["onnx-genai-ort/cuda", "onnx-genai-ort/cuda-13000"]
# Legacy passthroughs for graphs that configure `onnx-genai-ort` separately.
# Do not combine a 12.x passthrough with `cuda`; the engine CUDA EP requires 13.0.
cuda-12060 = ["onnx-genai-ort/cuda-12060"]
cuda-12080 = ["onnx-genai-ort/cuda-12080"]
cuda-12090 = ["onnx-genai-ort/cuda-12090"]
cuda-13000 = ["onnx-genai-ort/cuda-13000"]

[dependencies]
onnx-genai-metadata = { workspace = true }
onnx-genai-genai-config = { workspace = true }
onnx-genai-kv = { workspace = true }
onnx-genai-scheduler = { workspace = true }
onnx-genai-ort = { path = "../onnx-genai-ort", version = "=0.1.0-dev.2", default-features = false }
onnx-genai-runtime-config = { workspace = true }
onnx-runtime-ep-cpu = { workspace = true, optional = true }
onnx-runtime-ep-cuda = { workspace = true, optional = true }
onnx-runtime-ir = { workspace = true }
onnx-runtime-loader = { workspace = true }
onnx-runtime-session = { workspace = true, optional = true }
onnx-runtime-tracer = { workspace = true, optional = true }
prost = { version = "0.13" }
memmap2 = "0.9"
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokenizers = { workspace = true }
rand = "0.9.5"
half = { version = "2", features = ["use-intrinsics"] }
llguidance = "1.7.6"
toktrie_hf_tokenizers = "1.7.6"

[dev-dependencies]
onnx-genai-preprocess = { workspace = true }
onnx-rs = { workspace = true }
async-trait = { workspace = true }
