[package]
name = "onnx-genai-genai-config"
description = "Compatibility layer that converts onnxruntime-genai genai_config.json into native onnx-genai inference metadata"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["onnx", "genai", "metadata", "compat"]
categories = ["science", "parser-implementations"]

[dependencies]
onnx-genai-metadata = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
