[package]
name = "onnx-genai-ort"
description = "Safe Rust APIs for generative model inference with ONNX Runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["onnx", "runtime", "inference", "ffi"]
categories = ["api-bindings", "science"]

[features]
default = []
# `cuda` pulls in `libloading` so the shared-KV grow path can dynamically load
# cudart and issue device-to-device copies (see `src/cuda_rt.rs`). It is not
# linked at build time, keeping non-CUDA builds free of a CUDA toolkit.
cuda = ["dep:libloading"]

[dependencies]
half = { version = "2", features = ["use-intrinsics"] }
libloading = { version = "0.8", optional = true }
minijinja = { version = "2", features = ["json"] }
onnx-genai-metadata = { workspace = true }
onnx-genai-runtime-config = { workspace = true }
onnx-genai-ort-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokenizers = { workspace = true }
tracing = { workspace = true }
